--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "@loadable/component": "^5.6.0",
+    "body-parser": "^1.18.3",
+    "bytes": "^3.1.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
